RESOLVED FIXED 96633
[Qt] Fix build of Qt WTR/MiniBrowser with MSVC and nmake
https://bugs.webkit.org/show_bug.cgi?id=96633
Summary [Qt] Fix build of Qt WTR/MiniBrowser with MSVC and nmake
Simon Hausmann
Reported 2012-09-13 04:48:32 PDT
[Qt] Fix build of Qt WTR/MiniBrowser with MSVC and nmake
Attachments
Patch (15.06 KB, patch)
2012-09-13 05:32 PDT, Simon Hausmann
ossy: review+
ossy: commit-queue+
Simon Hausmann
Comment 1 2012-09-13 05:32:02 PDT
Csaba Osztrogonác
Comment 2 2012-09-13 07:45:43 PDT
Comment on attachment 163846 [details] Patch r=me
Simon Hausmann
Comment 3 2012-09-13 08:03:12 PDT
Note You need to log in before you can comment on or make changes to this bug.