[Qt] Fix build of Qt WTR/MiniBrowser with MSVC and nmake https://bugs.webkit.org/show_bug.cgi?id=96633

Reviewed by Csaba Osztrogonác.

WTR and MiniBrowser both have DRT in their include path (for the shared font stuff). Batch
builds with MSVC and nmake result in nmake picking up main.cpp from the wrong directory.
It's the usual problem and the usual solution is to rename one of the conflicting files.
This patch chooses to rename DRT instead of WTR and MBR.

Fixed include order at the same time to match style guide.

* DumpRenderTree/qt/DumpRenderTree.pro:
* DumpRenderTree/qt/DumpRenderTreeMain.cpp: Renamed from Tools/DumpRenderTree/qt/main.cpp.
(messageHandler):
(isOption):
(takeOptionValue):
(printUsage):
(main):

Canonical link: https://commits.webkit.org/114547@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128461 268f45cc-cd09-0410-ab3c-d52691b4dbfc